# personal-punch-clock

./: .gitignore  README.md  punch_clock.py  pyproject.toml  tasks.py
test/: .gitignore  __init__.py  has_header.csv  in.csv  main.csv  many_in.csv  many_out.csv  out.csv  test_punch_clock.py
