[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-punch-clock"
authors = [
    {name = "Nickolas Wilson"},
]
description = "A bare-bones command-line punch clock"
readme = "README.md"
version = "1.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pandas~=2.2",
]
keywords = ["punch clock", "time clock"]

[project.optional-dependencies]
dev = [
    "black~=24.4",
    "invoke~=2.2",
    "isort~=5.13",
    "mypy~=1.10",
    "pandas-stubs~=2.2",
    "pytest~=8.2",
]

[project.urls]
Repository = "https://github.com/nickolasjwilson/personal-punch-clock"

[project.scripts]
punch-clock = "punch_clock:main"

[tool.black]
line-length = 79
